tests/analyzer/errors/struct_default_field.rv
struct Person {
    age: int = "42"
}

fn main() {}
